--- a/code/02_descriptive_tables.Rmd
+++ b/code/02_descriptive_tables.Rmd
@@ -39,6 +39,7 @@ library(ggplot2)
 library(lubridate)
 library(stringr)
 library(knitr)
+library(Kendall)
 library(kableExtra)
 library(councilcount)
 library(councildown)
@@ -71,6 +72,7 @@ incident_counts %>%
 ```
 
 ## Analysis 2: Top 3 Incident Types by District
+### NOTE: "All Districts" refers to emergencies submitted to all Council Members.
 
 ```{r}
 # Arrange in descending order top incident types by council district
@@ -145,6 +147,7 @@ incidents_by_district %>%
 ```
 
 ## Analysis 3: Top 3 Incident Types by Borough
+### NOTE: "All Boroughs" refers to emergencies submitted to all Council Members.
 
 ```{r}
 # Arrange in descending order top incident types by borough
@@ -218,20 +221,33 @@ incidents_by_month %>%
                 full_width = FALSE) %>%
   row_spec(0, bold = TRUE, background = "#f2f2f2")
 
-# Creating an enhanced time series plot
+# Perform the Mann-Kendall test
+mk_test <- MannKendall(incidents_by_month$Total_Incidents)
+mk_p_value <- round(mk_test$sl[1], 4)  # p-value of the test
+mk_tau <- round(mk_test$tau[1], 4)     # Kendall's tau statistic
+
+# Determine trend direction and significance
+trend_text <- ifelse(mk_p_value <= 0.05,
+                     ifelse(mk_tau > 0, "Significant Increasing Trend", "Significant Decreasing Trend"),
+                     "No Significant Trend")
+
+# Make the plot
 nycc_palette <- pal_nycc()
 monthly_plot <- ggplot(incidents_by_month, aes(x = Month, y = Total_Incidents)) +
   geom_line(size = 0.5, color = nycc_palette[2]) +
   geom_point(size = 2, color = nycc_palette[2]) +
+  # Add a smoother to highlight the trend visually
+  geom_smooth(method = "loess", se = FALSE, linetype = "dashed", color = nycc_palette[4]) +
   labs(title = "Monthly Emergency Incidents",
-       subtitle = "Trend Analysis of Emergency Notifications",
+       subtitle = paste0("Trend Analysis of Emergency Notifications\n",
+                        "Mann-Kendall Test: ", trend_text, 
+                        " (tau = ", mk_tau, ", p-value = ", mk_p_value, ")"),
        x = "Month",
        y = "Number of Incidents") +
   theme_nycc() +
   theme(
     axis.text.x = element_text(angle = 45, hjust = 1)
   )
-
 print(monthly_plot)
 ```
 
@@ -259,23 +275,51 @@ incidents_by_month_borough %>%
                 full_width = TRUE) %>%
   row_spec(0, bold = TRUE, background = "#f2f2f2")
 
-# Creating an enhanced time series plot with lines for each borough
-monthly_borough_plot <- ggplot(incidents_by_month_borough, 
-                              aes(x = Month, y = Total_Incidents, color = Borough)) +
-  geom_line(size = 0.5) +
-  geom_point(size = 1) +
-  scale_color_nycc() +
-  labs(title = "Monthly Emergency Incidents by Borough",
-       subtitle = "Comparative Trend Analysis Across NYC Boroughs",
-       x = "Month",
-       y = "Number of Incidents",
-       color = "Borough") +
-  theme_nycc() +
-  theme(
-    axis.text.x = element_text(angle = 45, hjust = 1)
-  )
+# Get the list of unique boroughs
+boroughs <- unique(incidents_by_month_borough$Borough)
+
+# Create a list to store the plots
+borough_plots <- list()
+
+# Create individual plots for each borough with Mann-Kendall test
+for (borough in boroughs) {
+  # Filter data for the current borough
+  borough_data <- incidents_by_month_borough %>%
+    filter(Borough == borough)
   
-print(monthly_borough_plot)
+  # Perform the Mann-Kendall test
+  mk_test <- MannKendall(borough_data$Total_Incidents)
+  mk_p_value <- round(mk_test$sl[1], 4)  # p-value of the test
+  mk_tau <- round(mk_test$tau[1], 4)     # Kendall's tau statistic
+  
+  # Determine trend direction and significance
+  trend_text <- ifelse(mk_p_value <= 0.05,
+                       ifelse(mk_tau > 0, "Significant Increasing Trend", "Significant Decreasing Trend"),
+                       "No Significant Trend")
+  
+  # Create the plot for this borough
+  borough_plot <- ggplot(borough_data, aes(x = Month, y = Total_Incidents)) +
+    geom_line(size = 0.5, color = nycc_palette[which(boroughs == borough)]) +
+    geom_point(size = 2, color = nycc_palette[which(boroughs == borough)]) +
+    # Add a smoother to highlight the trend visually
+    geom_smooth(method = "loess", se = FALSE, linetype = "dashed", color = nycc_palette[4]) +
+    labs(title = paste0(borough, " Emergency Incidents"),
+         subtitle = paste0("Trend Analysis of Emergency Notifications\n",
+                          "Mann-Kendall Test: ", trend_text, 
+                          " (tau = ", mk_tau, ", p-value = ", mk_p_value, ")"),
+         x = "Month",
+         y = "Number of Incidents") +
+    #theme_nycc() +
+    theme(
+      axis.text.x = element_text(angle = 45, hjust = 1)
+    )
+  
+  # Store the plot in our list
+  borough_plots[[borough]] <- borough_plot
+  
+  # Print the plot
+  print(borough_plot)
+}
 ```
 
 ## Analysis 5: Percentage of Concluded Reports by District
